# paypredict

./: .gitignore  CLAUDE.md  README.md  project-spec.md
api/: alembic.ini  docker-compose.yml  init-db.sql  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 45bde65cbdd7_rename_factor_set_enums_to_collection_.py  4664b45678c5_normalize_factor_key_in_score_results_.py  5b17a75fd7b3_add_webhook_secret_to_tenant.py  66d275afe3ed_add_backtest_tables.py  9ce5ceb0356c_add_recommended_score_score_improvement_.py  ad96b9835926_add_notification_table.py  af259bfe8cfa_phase_2_5_dashboard_endpoints_setup.py  f012f11380b2_create_initial_tables.py
api/app/: config.py  database.py  dependencies.py  main.py  seed.py
api/app/api/: docs.py  docs_config.py
api/app/models/: __init__.py  alert.py  api_key.py  backtest.py  factor_weight.py  notification.py  outcome.py  score_request.py  score_result.py  tenant.py  user.py
api/app/schemas/: __init__.py  analytics.py  auth.py  backtest.py  bulk_score.py  config.py  errors.py  outcome.py  outcomes_list.py  score.py  scores_list.py
api/app/scoring/: engine.py  registry.py  timing_optimiser.py
api/app/services/: alert_service.py  analytics_service.py  auth_service.py  backtest_service.py  bulk_scoring_service.py  config_service.py  csv_parser.py  notification_service.py  outcome_service.py  outcomes_service.py  query_utils.py  rate_limit_service.py  scores_service.py  scoring_service.py  (+1 more)
api/scripts/: test_flow.py
api/tests/: conftest.py  test_method_filtering.py  test_scoring_engine.py  test_timing_optimiser.py
(+165 files in other folders)
